--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,7 +30,10 @@ body {
   font-size: 18px;
   line-height: 28px;
   color: var(--black);
-  background: var(--grey-light);
+  /* background: var(--grey-light); */
+  /* background: url('../assets/bg.jpg');
+  width: 100%;
+  height: 100%; */
 }
 
 /* Typography */
