--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,17 +24,17 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   margin: 0;
   font-family: sans-serif;
   font-size: 18px;
   line-height: 28px;
   color: var(--black);
-  /* background: var(--grey-light); */
-  /* background: url('../assets/bg.jpg');
+  background: chocolate;
+} */
+/* background: url("../assets/bg.jpg");
   width: 100%;
   height: 100%; */
-}
 
 /* Typography */
 .center {
