--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>IndiClassroom</title>
 </head>
-<body style="background-image: url('static/assets/bg.jpg');background-size: cover;height: 1000px;width: 100%;background-position: center;background-repeat: no-repeat;">
+<body>
     <nav class="navbar navbar-dark bg-dark d-flex">       
         <div class="container align-items-center">
             <div class="navbar-brand">
                 <h3><a href="/" class="text-decoration-none text-white">IndiClassroom</a></h3>
             </div>
+            {%if not session['user'] %}
           <a class="btn-outline-secondary btn navbar-brand" href="/loginform">Login</a>
+          {% else %}
+          <a href="/user/logout" class="btn-outline-secondary btn navbar-brand">Log Out</a>
+          {% endif %}
         </div>
     </nav>
     {% block content %}
