--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 
     <h1 class="center">Create an Account</h1>
 
-    <form name="signup_form">
+    <form name="signup_form" action="/user/signup" method="post">
 
       <label for="name">Name</label><i class="fa fa-user mx-2" style="font-size:x-large"></i>
       <input type="text" name="name" class="field" required>
