--- a/templates/studentInfo.html
+++ b/templates/studentInfo.html
@@ -95,8 +95,11 @@
                 <div class="card w-100">
                     {{ attendance[i].subject }}
                     {{ attendance[i].date }}
-                    {% if not attendance[i].isMissing %}
-                        <a href="{{ attendance[i].link }}">Mark attendance</a>
+                    {% if attendance[i].isMissing %}
+                        <p>Present</p>
+                    {% endif %}
+                    {% if attendance[i].isAbsent %}
+                        <p>Absent</p>
                     {% endif %}
                 </div>
             {% endfor %}
