--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="card-wrapper">
+<div class="card-wrapper-item">
 
-  <div class="card">
+  <!-- <div class="card">
 
     <h1 class="center">Dashboard</h1>
     <p class="center">You are currently logged in.</p>
@@ -11,23 +11,20 @@
       <a href="/user/logout" class="btn btn-primary">Log Out</a>
     </div>
 
-  </div>
-
-  <div class="card">
-
-    <h2 class="center">Your Info</h2>
+  </div> -->
+    <!-- <h2 class="center">Your Info</h2>
 
     <p>
       <strong>ID:</strong> {{ session['user']['_id']['$oid'] }}<br>
       <strong>Name:</strong> {{ session['user']['name'] }}<br>
       <strong>Email:</strong> {{ session['user']['email'] }}
-    </p>
+    </p> -->
     
-    <button id="myDIV" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-      Join Classroom
+    <button id="myDIV" type="button" class="mt-5 custom-btn btn-12 w-25" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      <span class="w-100">Join Classroom</span><span class="w-100">Join Classroom</span>
     </button>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-dialog modal-dialog-centered modal-md">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Join Classroom</h5>
@@ -37,10 +34,10 @@
             <form class="row needs-validation" novalidate name="join_class" action="/dashboard/join" method="post">
               <div class="col-lg">
                 <label for="validationCustom01" class="form-label">Enter Classroom Code</label>
-                <input type="text" class="form-control" id="validationCustom01" placeholder="eg. XYZ-ABC" required
+                <input type="text" class="form-control w-75" id="validationCustom01" placeholder="eg. XYZ-ABC" required
                   name="code">
               </div>
-              <input type="submit" value="Join Classroom" class="btn btn-primary">
+              <input type="submit" value="Join Classroom" class="custom-btn btn-3 w-50">
             </form>
           </div>
           <div class="modal-footer">
@@ -50,21 +47,34 @@
       </div>
     </div>
   </div>
-  {% if not classroom %}
-  <div class="card">
-    <h6 class="center">No Classroom has been Created</h6>
-  </div>
-  {% endif %}
-  {%for i in range(0,Length)%}
-  <div class="card">
-    <div class="d-flex justify-content-evenly align-items-center">
-      <h4>{{classroom[i]["cname"]}}</h4>
-      <h5>Teachers : {{classroom[i]["teacher"]|length}}</h5>
+  <div class="card-wrapper-item">
+
+    {% if not classroom %}
+    <div class="card">
+      <h6 class="center">No Classroom has been Created</h6>
     </div>
-    <div class="center mt-2">
-      <a href="{{url_for('enter_class',id = classroom[i]['cid'])}}" class="btn btn-outline-success">Enter Class</a>
+    {% endif %}
+    {%for i in range(0,Length)%}
+    <!-- <div class="card">
+      <div class="d-flex justify-content-evenly align-items-center">
+        <h4>{{classroom[i]["cname"]}}</h4>
+        <h5>Teachers : {{classroom[i]["teacher"]|length}}</h5>
+      </div>
+      <div class="center mt-2">
+        <a href="{{url_for('enter_class',id = classroom[i]['cid'])}}" class="btn btn-outline-success">Enter Class</a>
+      </div>
+    </div> -->
+    <div class="card-wrapper-item">
+      <div class="card p-3" style="width: 25rem;">
+        <h3 class="card-header">{{classroom[i]["cname"]}}</h3>
+        <img src="../static/assets/3895251.jpg" class="card-img-top view-img" alt="..." style="height: 230px;width: 250px;margin-left: 50px;">
+        <div class="card-body">
+        <h5>Teachers : {{classroom[i]["teacher"]|length}}</h5>
+          <a href="{{url_for('enter_class',id = classroom[i]['cid'])}}" class="custom-btn btn-13 text-decoration-none w-100 text-center">View Class</a>
+        </div>
+      </div>
     </div>
+    {%endfor%}
   </div>
-  {%endfor%}
-</div>
+
 {% endblock %}
