--- a/templates/enterclass.html
+++ b/templates/enterclass.html
@@ -1,132 +1,134 @@
 {% extends "base.html" %}
 {% block content %}
-
-    
-
-<div class="card container mt-5">
-    <h4>{{data['cname']}}</h4>
-    <div class="row g-3">
-        <h6 class="col-sm">Students : {{data['student']|length}}</h6>
-        <h6 class="col-sm">Teachers : {{data['teacher']|length}}</h6>
-        <input type="hidden" value="{{data['cid']}}" name="cid" />
-    </div>
+<div class="card view p-2">
+    <input type="hidden" value="{{data['cid']}}" name="cid" />
+    <h2 class="card-header">{{data['cname']}}<i class="bx bx-book-reader float-end" style="color: deepskyblue;"></i></h2>
+    <h6 class="col-sm p-2">Students : {{data['student']|length}}</h6>
+    <h6 class="col-sm p-2">Teachers : {{data['teacher']|length}}</h6>
+    <h6 class="col-sm p-2">Teachers : </h6>
+    {% for i in range(data['teacher']|length) %}
+    <p class="card-body">{{data['teacher'][i]['name']}}</p>
+    {%endfor%}
 </div>
 <div class="container">
-    <ul class="nav nav-pills nav-fill" id="myTab" role="tablist">
-        <li class="nav-item btn-success" role="presentation">
-        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Done</button>
+    <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
+                role="tab" aria-controls="home" aria-selected="true">Done</button>
         </li>
         <li class="nav-item" role="presentation">
-        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">UnDone</button>
+            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
+                role="tab" aria-controls="profile" aria-selected="false">UnDone</button>
         </li>
         <li class="nav-item" role="presentation">
-        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Missing</button>
+            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button"
+                role="tab" aria-controls="contact" aria-selected="false">Missing</button>
         </li>
         <li class="nav-item" role="presentation">
-        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#attendance" type="button" role="tab" aria-controls="attendance" aria-selected="false">Attendance</button>
+            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#attendance" type="button"
+                role="tab" aria-controls="attendance" aria-selected="false">Attendance</button>
         </li>
     </ul>
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-            <div class="card-wrapper">
-                {% if not done %}
-                <div class="card">
-                    <h5 class="center">No Assignment Submiited Yet</h5>
-                </div>
-                {% else %}
-                <div class="card w-100">
-                    {% for i in range(done|length) %}
-                        <div class="row g-2">
-                            <h3>{{done[i]['title']}}</h3>
-                        </div>
-                        <img src="data:image/png;base64, {{done_img[i]}}" />
-                        <br/>
-                        <img src="data:image/png;base64, {{submission[i]}}" />
-                    {% endfor %}
-                </div>
-                <br/>
-                {% endif %}
+
+            {% if not done %}
+            <div class="card nothing">
+                <h5 class="center">No Assignment Submiited Yet</h5>
             </div>
+            {% else %}
+            {% for i in range(done|length) %}
+            <div class="card ml">
+                <div class="text-center text-black-50">
+                    <h3>{{done[i]['title']}}</h3>
+                </div>
+                <div class="d-flex g-2 p-2 my-2" >
+                    <img src="data:image/png;base64, {{done_img[i]}}"  class="left"/>
+                    <img src="data:image/png;base64, {{submission[i]}}"  class="right"/>
+                </div>
+            </div>
+            {% endfor %}
+            <br />
+            {% endif %}
+
         </div>
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-            <div class="card-wrapper">
-                {% if not unDone %}
-                <div class="card">
-                    <h5 class="center">No Assignment Submiited Yet</h5>
-                </div>
-                {% else %}
-                <div class="card w-100">
-                    {% for i in range(unDone|length) %}
-                    <div class="row g-2">
+
+            {% if not unDone %}
+            <div class="card nothing">
+                <h5 class="center">No Assignment Remaining</h5>
+            </div>
+            {% else %}
+                {% for i in range(unDone|length) %}
+                <div class="card-asst asst">
+                    <div class="text-center">
                         <h3>{{unDone[i]['title']}}</h3>
                     </div>
-                    <img src="data:image/png;base64, {{unDone_img[i]}}" />
-                    <form name="assignment" action="{{url_for('submit_assignment',id=unDone[i]['cid'],cid=data['cid'])}}"
+                    <div class="card_image"><img src="data:image/png;base64, {{unDone_img[i]}}"/></div>
+                    <form  name="assignment" action="{{url_for('submit_assignment',id=unDone[i]['cid'],cid=data['cid'])}}"
                         method="POST" enctype="multipart/form-data">
                         <div class="mb-3">
-                            <label for="formFile" class="form-label">Upload Assignment</label>
+                            <label for="formFile" class="form-label text-light">Upload Assignment</label><i class="bx bx-upload"></i>
                             <input class="form-control" type="file" id="formFile" name="file" autocomplete="off" required>
                             <input type="hidden" name="aid" value="{{unDone[i]['cid']}}" />
                         </div>
-                        <input type="submit" class="btn btn-primary col-12" value="Submit" />
+                        <input type="submit" class="custom-btn btn-3 col-12" value="Submit" />
                     </form>
-                    {% endfor %}
                 </div>
-                <br/>
-                {% endif %}
-            </div>
+                {% endfor %}
+            <!-- <br /> -->
+            {% endif %}
+
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-            <div class="card-wrapper">
-                {% if not missing %}
-                <div class="card">
-                    <h5 class="center">No Assignment Submiited Yet</h5>
+
+            {% if not missing %}
+            <div class="card nothing">
+                <h5 class="center">No Assignment Missing</h5>
+            </div>
+            {% else %}
+            <div class="card w-100">
+                {% for i in range(missing|length) %}
+                <div class="row g-2">
+                    <h3>{{missing[i]['title']}}</h3>
                 </div>
-                {% else %}
-                <div class="card w-100">
-                    {% for i in range(missing|length) %}
-                    <div class="row g-2">
-                        <h3>{{missing[i]['title']}}</h3>
+                <img src="data:image/png;base64, {{missing_img[i]}}" />
+                <form name="assignment" action="{{url_for('submit_assignment',id=missing[i]['cid'],cid=data['cid'])}}"
+                    method="POST" enctype="multipart/form-data">
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">Upload Assignment</label>
+                        <input class="form-control" type="file" id="formFile" name="file" autocomplete="off" required>
+                        <input type="hidden" name="aid" value="{{missing[i]['cid']}}" />
                     </div>
-                    <img src="data:image/png;base64, {{missing_img[i]}}" />
-                    <form name="assignment" action="{{url_for('submit_assignment',id=missing[i]['cid'],cid=data['cid'])}}"
-                        method="POST" enctype="multipart/form-data">
-                        <div class="mb-3">
-                            <label for="formFile" class="form-label">Upload Assignment</label>
-                            <input class="form-control" type="file" id="formFile" name="file" autocomplete="off" required>
-                            <input type="hidden" name="aid" value="{{missing[i]['cid']}}" />
-                        </div>
-                        <input type="submit" class="btn btn-primary col-12" value="Submit" />
-                    </form>
-                    {% endfor %}
-                </div>
-                <br/>
+                    <input type="submit" class="btn btn-primary col-12" value="Submit" /><i class="bx bx-upload"></i>
+                </form>
+                {% endfor %}
+            </div>
+            <br />
+            {% endif %}
+
+        </div>
+        <div class="tab-pane fade" id="attendance" role="tabpanel" aria-labelledby="contact-tab">
+            {% for i in range(marked_percentage|length) %}
+            <p>{{ marked_percentage[i].name }} {{ marked_percentage[i].total }} {{ marked_percentage[i].marked }}</p>
+            {% endfor %}
+            {% for i in range(attendance|length) %}
+            <div class="card w-100">
+                {{ attendance[i].subject }}
+                {{ attendance[i].date }}
+                {% if not attendance[i].isMissing and not attendance[i].isAbsent %}
+                <a href="{{ attendance[i].link }}">Mark attendance</a>
+                {% endif %}
+                {% if attendance[i].isAbsent %}
+                <p>Absent</p>
                 {% endif %}
             </div>
-        </div>
-    <div class="tab-pane fade" id="attendance" role="tabpanel" aria-labelledby="contact-tab">
-        {% for i in range(marked_percentage|length) %}
-            <p>{{ marked_percentage[i].name }} {{ marked_percentage[i].total }} {{ marked_percentage[i].marked }}</p>
-        {% endfor %}
-        <div class="card-wrapper">
-            {% for i in range(attendance|length) %}
-                <div class="card w-100">
-                    {{ attendance[i].subject }}
-                    {{ attendance[i].date }}
-                    {% if not attendance[i].isMissing and not attendance[i].isAbsent %}
-                        <a href="{{ attendance[i].link }}">Mark attendance</a>
-                    {% endif %}
-                    {% if attendance[i].isAbsent %}
-                        <p>Absent</p>
-                    {% endif %}
-                </div>
             {% endfor %}
-        </div></div>
+        </div>
     </div>
-</div>
 
-{% endblock %}
-<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    {% endblock %}
+    <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
