--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
-
 {% block content %}
-<div class="card-wrapper">
+<div class="card-wrapper-item mt-4">
 
-  <div class="card">
+  <div class="card-item">
 
     <h1 class="center">Create an Account</h1>
 
@@ -28,9 +27,9 @@
         <!-- <label for="student">Student</label>
         <input type="radio" name="user_type" value="student" id="student"> -->
       </div>
-      <input type="submit" value="Sign Up" class="btn btn-primary">
+      <input type="submit" value="Sign Up" class="custom-btn btn-14 w-50">
       <div class="center">
-        <a href="/loginform" class="btn btn-secondary">Log in Here</a>
+        <a href="/loginform" class="custom-btn btn-13 w-50 text-decoration-none">Log in Here</a>
       </div>
 
     </form>
